remove mock creators

--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -215,33 +215,12 @@
                         src="https://pbs.twimg.com/profile_images/619557646450831360/58ES9E4X_400x400.jpg"
                         alt="Avatar 1"
                       />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://pbs.twimg.com/profile_images/1806354851237974016/M55Vhq4z_400x400.jpg"
-                        alt="Avatar 5"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://avatars.githubusercontent.com/u/7559318?v=4"
-                        alt="Avatar 2"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://avatars.githubusercontent.com/u/52798353?v=4"
-                        alt="Avatar 3"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://avatars.githubusercontent.com/u/4841528?v=4"
-                        alt="Avatar 4"
-                      />
                     </div>
                   </td>
                   <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right">
                     3,550
                   </td>
                 </tr>
-
                 <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
                   <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 flex items-center gap-2">
                     <svg
@@ -254,125 +233,23 @@
                       stroke-width="2"
                       stroke-linecap="round"
                       stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-brand-golang"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-brand-php"
                     >
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M15.695 14.305c1.061 1.06 2.953 .888 4.226 -.384c1.272 -1.273 1.444 -3.165 .384 -4.226c-1.061 -1.06 -2.953 -.888 -4.226 .384c-1.272 1.273 -1.444 3.165 -.384 4.226z" /><path d="M12.68 9.233c-1.084 -.497 -2.545 -.191 -3.591 .846c-1.284 1.273 -1.457 3.165 -.388 4.226c1.07 1.06 2.978 .888 4.261 -.384a3.669 3.669 0 0 0 1.038 -1.921h-2.427" /><path d="M5.5 15h-1.5" /><path d="M6 9h-2" /><path d="M5 12h-3" />
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M12 12m-10 0a10 9 0 1 0 20 0a10 9 0 1 0 -20 0" /><path d="M5.5 15l.395 -1.974l.605 -3.026h1.32a1 1 0 0 1 .986 1.164l-.167 1a1 1 0 0 1 -.986 .836h-1.653" /><path d="M15.5 15l.395 -1.974l.605 -3.026h1.32a1 1 0 0 1 .986 1.164l-.167 1a1 1 0 0 1 -.986 .836h-1.653" /><path d="M12 7.5l-1 5.5" /><path d="M11.6 10h2.4l-.5 3" />
                     </svg>
-                    Go
+                    PHP
                   </td>
                   <td class="align-middle [&:has([role=checkbox])]:pr-0">
                     <div class="flex items-center justify-center -space-x-1">
                       <img
                         class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://pbs.twimg.com/profile_images/1759330620160049152/2i_wkOoK_400x400.jpg"
+                        src="https://avatars.githubusercontent.com/u/5845193?v=4"
                         alt="Avatar 2"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://pbs.twimg.com/profile_images/1364586548587622400/bMAK0R8I_400x400.jpg"
-                        alt="Avatar 1"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://avatars.githubusercontent.com/u/647?v=4"
-                        alt="Avatar 3"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://avatars.githubusercontent.com/u/6540297?v=4"
-                        alt="Avatar 4"
                       />
                     </div>
                   </td>
                   <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right">
                     1,930
-                  </td>
-                </tr>
-                <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-                  <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 flex items-center gap-2">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="24"
-                      height="24"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-droplet"
-                    >
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M7.502 19.423c2.602 2.105 6.395 2.105 8.996 0c2.602 -2.105 3.262 -5.708 1.566 -8.546l-4.89 -7.26c-.42 -.625 -1.287 -.803 -1.936 -.397a1.376 1.376 0 0 0 -.41 .397l-4.893 7.26c-1.695 2.838 -1.035 6.441 1.567 8.546z" />
-                    </svg>
-                    Elixir
-                  </td>
-                  <td class="align-middle [&:has([role=checkbox])]:pr-0">
-                    <div class="flex items-center justify-center -space-x-1">
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://pbs.twimg.com/profile_images/1701600661161553920/rA1aH5qT_400x400.jpg"
-                        alt="Avatar 1"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://pbs.twimg.com/profile_images/1716909976319610880/pbNhv0S8_400x400.jpg"
-                        alt="Avatar 3"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://pbs.twimg.com/profile_images/1542994098512171009/QRXmNaKJ_400x400.jpg"
-                        alt="Avatar 2"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://pbs.twimg.com/profile_images/1700037242033524736/xAqCbK9P_400x400.jpg"
-                        alt="Avatar 3"
-                      />
-                    </div>
-                  </td>
-                  <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right">
-                    896
-                  </td>
-                </tr>
-                <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-                  <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 flex items-center gap-2">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="24"
-                      height="24"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-brand-rust"
-                    >
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M10.139 3.463c.473 -1.95 3.249 -1.95 3.722 0a1.916 1.916 0 0 0 2.859 1.185c1.714 -1.045 3.678 .918 2.633 2.633a1.916 1.916 0 0 0 1.184 2.858c1.95 .473 1.95 3.249 0 3.722a1.916 1.916 0 0 0 -1.185 2.859c1.045 1.714 -.918 3.678 -2.633 2.633a1.916 1.916 0 0 0 -2.858 1.184c-.473 1.95 -3.249 1.95 -3.722 0a1.916 1.916 0 0 0 -2.859 -1.185c-1.714 1.045 -3.678 -.918 -2.633 -2.633a1.916 1.916 0 0 0 -1.184 -2.858c-1.95 -.473 -1.95 -3.249 0 -3.722a1.916 1.916 0 0 0 1.185 -2.859c-1.045 -1.714 .918 -3.678 2.633 -2.633a1.914 1.914 0 0 0 2.858 -1.184z" /><path d="M8 12h6a2 2 0 1 0 0 -4h-6v8v-4z" /><path d="M19 16h-2a2 2 0 0 1 -2 -2a2 2 0 0 0 -2 -2h-1" /><path d="M9 8h-4" /><path d="M5 16h4" />
-                    </svg>
-                    Rust
-                  </td>
-                  <td class="align-middle [&:has([role=checkbox])]:pr-0">
-                    <div class="flex items-center justify-center -space-x-1">
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://avatars.githubusercontent.com/u/4466899?v=4"
-                        alt="Avatar 2"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://yt3.googleusercontent.com/-gayBCxnBHku0sO_qLmnDpnPeSWo0eNCMZkj3TuWAV-gN9vv4cmlwuSqVUW7Jf30ChNjqsmlGw=s160-c-k-c0x00ffffff-no-rj"
-                        alt="Avatar 1"
-                      />
-                      <img
-                        class="inline-block h-8 w-8 rounded-full ring-4 ring-[#16112f]"
-                        src="https://yt3.googleusercontent.com/ytc/AIdro_nryaup3w5MbESNXQzBXQCQbq9GDbfdDdkqzURz6aK41l8=s160-c-k-c0x00ffffff-no-rj"
-                        alt="Avatar 3"
-                      />
-                    </div>
-                  </td>
-                  <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right">
-                    827
                   </td>
                 </tr>
               </tbody>
