--- a/lib/algora_web/live/ad_live/analytics.html.heex
+++ b/lib/algora_web/live/ad_live/analytics.html.heex
@@ -56,19 +56,19 @@
         <div class="grid grid-cols-4 gap-4 text-center">
           <div>
             <p class="text-xs text-gray-300 tracking-tight font-bold uppercase">Views</p>
-            <p class="text-2xl font-bold">7.2K</p>
+            <p class="text-2xl font-bold"><%= @stats.total_views %></p>
           </div>
           <div>
             <p class="text-xs text-gray-300 tracking-tight font-bold uppercase">Airtime</p>
-            <p class="text-2xl font-bold">30m 15s</p>
+            <p class="text-2xl font-bold"><%= @stats.airtime %></p>
           </div>
           <div>
             <p class="text-xs text-gray-300 tracking-tight font-bold uppercase">Streams</p>
-            <p class="text-2xl font-bold">389</p>
+            <p class="text-2xl font-bold"><%= @stats.streams %></p>
           </div>
           <div>
             <p class="text-xs text-gray-300 tracking-tight font-bold uppercase">Creators</p>
-            <p class="text-2xl font-bold">42</p>
+            <p class="text-2xl font-bold"><%= @stats.creators %></p>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
                     Twitch
                   </td>
                   <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right">
-                    80,137
+                    <%= @stats.views.twitch %>
                   </td>
                 </tr>
                 <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
@@ -136,7 +136,7 @@
                     YouTube
                   </td>
                   <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right">
-                    20,819
+                    <%= @stats.views.youtube %>
                   </td>
                 </tr>
                 <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
@@ -158,7 +158,7 @@
                     X (Twitter)
                   </td>
                   <td class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right">
-                    9,487
+                    <%= @stats.views.twitter %>
                   </td>
                 </tr>
               </tbody>
